@@ -5,8 +5,8 @@ AC_DEFUN([RTEMS_ENABLE_ITRON],
 AC_ARG_ENABLE([itron],
 AS_HELP_STRING([--enable-itron],[enable itron interface (DEPRECATED)]),
 [case "${enableval}" in 
-  yes) RTEMS_HAS_ITRON_API=yes ;;
-  no) RTEMS_HAS_ITRON_API=no ;;
+  yes) enable_itron=yes ;;
+  no) enable_itron=no ;;
   *)  AC_MSG_ERROR(bad value ${enableval} for enable-itron option) ;;
-esac],[RTEMS_HAS_ITRON_API=no]) 
+esac],[enable_itron=no]) 
 ])
